include/lpm.h

#define LPM_INVALID_NEXT_HOP ((uint32_t)-1)
/* ============================================================================
 * Data Structures - Optimized for Speed
 * ============================================================================ */

typedef struct lpm_trie lpm_trie_t;
/* ============================================================================
 * GENERIC API (dispatches to compile-time selected algorithm)
 *
 * These functions dispatch to the algorithm selected via CMake flags:
 * - LPM_IPV4_DEFAULT: "dir24" (default) or "stride8"
 * - LPM_IPV6_DEFAULT: "wide16" (default) or "stride8"
 * ============================================================================ */

/* Generic create (uses compile-time selected algorithm) */
lpm_trie_t *lpm_create_ipv4(void);
lpm_trie_t *lpm_create_ipv6(void);
/* Generic add/delete (auto-dispatch based on trie type) */
int lpm_add(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len, uint32_t next_hop);
int lpm_delete(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len);
/* Generic lookup (uses compile-time selected algorithm) */
uint32_t lpm_lookup_ipv4(const lpm_trie_t *trie, uint32_t addr);
uint32_t lpm_lookup_ipv6(const lpm_trie_t *trie, const uint8_t addr[16]);
/* Generic batch lookup */
void lpm_lookup_batch_ipv4(const lpm_trie_t *trie, const uint32_t *addrs, 
                           uint32_t *next_hops, size_t count);
void lpm_lookup_batch_ipv6(const lpm_trie_t *trie, const uint8_t (*addrs)[16], 
                           uint32_t *next_hops, size_t count);
/* ============================================================================
 * ALGORITHM-SPECIFIC API: IPv4 DIR-24-8
 *
 * Uses 24-bit direct table + 8-bit extension for /25-/32 routes.
 * Optimal for IPv4 with 1-2 memory accesses per lookup.
 * ============================================================================ */

lpm_trie_t *lpm_create_ipv4_dir24(void);
int lpm_add_ipv4_dir24(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len, uint32_t next_hop);
int lpm_delete_ipv4_dir24(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len);
uint32_t lpm_lookup_ipv4_dir24(const lpm_trie_t *trie, uint32_t addr);
uint32_t lpm_lookup_ipv4_dir24_bytes(const lpm_trie_t *trie, const uint8_t addr[4]);
void lpm_lookup_batch_ipv4_dir24(const lpm_trie_t *trie, const uint32_t *addrs, 
                                  uint32_t *next_hops, size_t count);
void lpm_lookup_batch_ipv4_dir24_bytes(const lpm_trie_t *trie, const uint8_t (*addrs)[4],
                                        uint32_t *next_hops, size_t count);
/* ============================================================================
 * ALGORITHM-SPECIFIC API: IPv4 8-bit Stride
 *
 * Standard 8-bit stride trie for IPv4. 4 levels maximum.
 * Good for diverse prefix distributions.
 * ============================================================================ */

lpm_trie_t *lpm_create_ipv4_8stride(void);
/* ============================================================================
 * UTILITY FUNCTIONS
 * ============================================================================ */

void lpm_destroy(lpm_trie_t *trie);